@@ -1826,8 +1826,8 @@ int32_t SPVM_API_call_spvm_method_vm(SPVM_ENV* env, int32_t method_id, SPVM_VALU
           int32_t length1 = *(int32_t*)((intptr_t)object1 + (intptr_t)env->object_length_offset);
           int32_t length2 = *(int32_t*)((intptr_t)object2 + (intptr_t)env->object_length_offset);
           
-          int8_t* bytes1 = env->get_elems_byte(env, object1);
-          int8_t* bytes2 = env->get_elems_byte(env, object2);
+          const char* bytes1 = env->get_chars(env, object1);
+          const char* bytes2 = env->get_chars(env, object2);
           
           int32_t short_string_length = length1 < length2 ? length1 : length2;
           int32_t retval = memcmp(bytes1, bytes2, short_string_length);
@@ -2127,7 +2127,7 @@ int32_t SPVM_API_call_spvm_method_vm(SPVM_ENV* env, int32_t method_id, SPVM_VALU
       {
         void* src_string = object_vars[opcode->operand1];
         int32_t src_string_length = env->length(env, src_string);
-        int8_t* src_string_data = env->get_elems_byte(env, src_string);
+        const char* src_string_data = env->get_chars(env, src_string);
         void* byte_array = env->new_byte_array_raw(env, src_string_length);
         int8_t* byte_array_data = env->get_elems_byte(env, byte_array);
         memcpy(byte_array_data, src_string_data, src_string_length);
@@ -5258,7 +5258,8 @@ SPVM_OBJECT* SPVM_API_get_type_name_raw(SPVM_ENV* env, SPVM_OBJECT* object) {
   int32_t scope_id = env->enter_scope(env);
   void* type_name_byte_array = env->new_byte_array(env, length + 1);
   
-  int8_t* cur = env->get_elems_byte(env, type_name_byte_array);
+  
+  char* cur = SPVM_API_alloc_memory_block_zero(env, length + 1);
   
   int32_t cur_index = 0;
   sprintf((char*)cur, "%s", basic_type_name);
@@ -5271,6 +5272,8 @@ SPVM_OBJECT* SPVM_API_get_type_name_raw(SPVM_ENV* env, SPVM_OBJECT* object) {
   }
   
   void* sv_type_name = env->new_string_raw(env, (const char*)cur, length);
+  
+  SPVM_API_free_memory_block(env, cur);
   
   env->leave_scope(env, scope_id);
   
@@ -5317,7 +5320,7 @@ SPVM_OBJECT* SPVM_API_new_stack_trace_raw(SPVM_ENV* env, SPVM_OBJECT* exception,
   const char* at_part = " at ";
 
   // Exception
-  int8_t* exception_bytes = env->get_elems_byte(env, exception);
+  const char* exception_bytes = env->get_chars(env, exception);
   int32_t exception_length = env->length(env, exception);
   
   // Total string length
@@ -5339,7 +5342,7 @@ SPVM_OBJECT* SPVM_API_new_stack_trace_raw(SPVM_ENV* env, SPVM_OBJECT* exception,
   
   // Create exception message
   void* new_exception = env->new_string_raw(env, NULL, total_length);
-  int8_t* new_exception_bytes = env->get_elems_byte(env, new_exception);
+  const char* new_exception_bytes = env->get_chars(env, new_exception);
   
   memcpy(
     (void*)(new_exception_bytes),
@@ -5376,7 +5379,7 @@ SPVM_OBJECT* SPVM_API_new_stack_trace(SPVM_ENV* env, SPVM_OBJECT* exception, con
 void SPVM_API_print(SPVM_ENV* env, SPVM_OBJECT* string) {
   (void)env;
   
-  int8_t* bytes = env->get_elems_byte(env, string);
+  const char* bytes = env->get_chars(env, string);
   int32_t string_length = env->length(env, string);
   
   {
@@ -5400,9 +5403,9 @@ SPVM_OBJECT* SPVM_API_concat_raw(SPVM_ENV* env, SPVM_OBJECT* string1, SPVM_OBJEC
   string3->type_dimension = 0;
   string3->type_category = SPVM_TYPE_C_TYPE_CATEGORY_STRING;
 
-  int8_t* string1_bytes = SPVM_API_get_elems_byte(env, string1);
-  int8_t* string2_bytes = SPVM_API_get_elems_byte(env, string2);
-  int8_t* string3_bytes = SPVM_API_get_elems_byte(env, string3);
+  const char* string1_bytes = SPVM_API_get_chars(env, string1);
+  const char* string2_bytes = SPVM_API_get_chars(env, string2);
+  char* string3_bytes = (char*)SPVM_API_get_chars(env, string3);
   
   if (string1_length > 0) {
     memcpy(string3_bytes, string1_bytes, string1_length);
