@@ -5,6 +5,7 @@ Revision history for SPVM
         * Improve compilation error messages. All field expressions is Foo->{bar}.
         * Improve compilation error messages. All class variable expressions is $Foo::Bar.
         * Improve a assignment compilation error messege. "argument 2" -> "2th argument".
+        * Use native api "get_chars" more instead of "get_elems_byte" in the right places.
 
 0.9500  2021-02-01
         [CHANGE]
